os-faults: enable building docs on rdo
The pymod2pkg translation for the required package was added in
I4dddc4c517018953d7a74244c08affe1df6499e9 .

Change-Id: I20c8091ce3e57bfbaa1c080a946486ec2b477da8

--- a/openstack/os-faults/os-faults.spec.j2
+++ b/openstack/os-faults/os-faults.spec.j2
@@ -69,9 +69,9 @@ Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
-# missing on rdo ci, so disable building docs on it for now
-%if ! 0%{?rdo}
 BuildRequires:  {{ py2pkg('sphinx_rtd_theme') }}
+%if ! 0%{?rdo}
+# this package its dependency js-jquery is not available for RDO
 BuildRequires:  {{ py2pkg('sphinxcontrib-programoutput') }}
 %endif
 
@@ -86,13 +86,15 @@ This package contains the documentation.
 %prep
 %autosetup -p1 -n os_faults-%{version}
 %py_req_cleanup
+%if 0%{?rdo}
+sed -i '/sphinxcontrib.programoutput/d' doc/source/conf.py
+sed -i '/sphinx.ext.autosectionlabel/d' doc/source/conf.py
+%endif
 
 %build
 %{py2_build}
-%if ! 0%{?rdo}
 %{__python2} setup.py build_sphinx --builder=html
 rm -rf doc/build/html/.{doctrees,buildinfo}
-%endif
 
 %install
 %{py2_install}
