freezer, freezer-api: Add Group to spec template
This is still needed for SUSE.

Change-Id: I6980a7878959273616636dd9c4026f233b75c59e
(cherry picked from commit 5f03765c399421dc4186a80ae5538420fe9eb625)

--- a/openstack/freezer-api/freezer-api.spec.j2
+++ b/openstack/freezer-api/freezer-api.spec.j2
@@ -10,6 +10,7 @@ Version:        {{ py2rpmversion() }}
 Release:        {{ py2rpmrelease() }}
 Summary:        OpenStack Backup and Restore - API service
 License:        {{ license('Apache-2.0') }}
+Group:          Development/Languages/Python
 Url:            https://launchpad.net/freezer
 Source0:        {{ source|basename }}
 Source1:        openstack-freezer-api.logrotate
