--- a/openstack/freezer/freezer.spec.j2
+++ b/openstack/freezer/freezer.spec.j2
@@ -10,6 +10,7 @@ Version:        {{ py2rpmversion() }}
 Release:        {{ py2rpmrelease() }}
 Summary:        OpenStack Backup and Restore
 License:        {{ license('Apache-2.0') }}
+Group:          Development/Languages/Python
 URL:            https://launchpad.net/freezer
 Source0:        {{ source|basename }}
 Source1:        openstack-freezer.logrotate
