Fix monasca-ceilometer ceilometer.metering.storage config typo
When replacing the list of ceilometer.metering.storage entries to
add monasca, a typo caused the ceilometer.sample.publisher list
to be overwritten with the ceilometer.metering.storage list.

Change-Id: Icdf62bb7b4ba4552411361324098938aee3c5592

--- a/openstack/monasca-ceilometer/monasca-ceilometer.spec.j2
+++ b/openstack/monasca-ceilometer/monasca-ceilometer.spec.j2
@@ -327,7 +327,7 @@ crudini --set %{setup_cfg} entry_points ceilometer.sample.publisher $"$pub_list"
 # add monasca-ceilometer storage driver to entry points
 driver_list=`crudini --get %{setup_cfg} entry_points ceilometer.metering.storage`
 driver_list="$driver_list"$'\n'"monasca = ceilometer.storage.impl_monasca:Connection"
-crudini --set %{setup_cfg} entry_points ceilometer.sample.publisher $"$driver_list"
+crudini --set %{setup_cfg} entry_points ceilometer.metering.storage $"$driver_list"
 
 %build
 #change to ceilometer directory
