--- a/openstack/vmware-nsx/vmware-nsx.spec.j2
+++ b/openstack/vmware-nsx/vmware-nsx.spec.j2
@@ -1,7 +1,7 @@
 {% set pypi_name = 'vmware-nsx' %}
-{% set upstream_version = upstream_version('11.0.0') %}
+{% set source = fetch_source('http://tarballs.openstack.org/vmware-nsx/vmware-nsx-stable-pike.tar.gz') %}
+{% set upstream_version = upstream_version() %}
 {% set rpm_release = '1' %}
-{% set source = url_pypi() %}
 
 Name:           {{ py2name() }}
 Version:        {{ py2rpmversion() }}
