--- a/openstack/oswin-tempest-plugin/oswin-tempest-plugin.spec.j2
+++ b/openstack/oswin-tempest-plugin/oswin-tempest-plugin.spec.j2
@@ -11,8 +11,9 @@ Additionally it provides a plugin to automatically load these tests into Tempest
 Name:          {{ py2pkg('oswin-tempest-plugin') }}
 Version:       {{ py2rpmversion() }}
 Release:       {{ py2rpmrelease() }}
-Summary:       Tempest plugin for the os-win project.
+Summary:       Tempest plugin for the os-win project
 License:       {{ license('Apache-2.0') }}
+Group:         Development/Languages/Python
 URL:           https://git.openstack.org/cgit/openstack/{{ pypi_name }}
 Source0:       {{ source|basename }}
 BuildRequires: openstack-macros
