keystonemiddleware: add 0001-Add-use_oslo_messaging-option.patch
Adding the https://review.openstack.org/#/c/546264/
changeset as a patch, since it will most likely not make
it into stable/pike and it is required by swift to make
security audit logs functional.

Change-Id: I6987859d08178198b654eadf3ebe103a9e68f9cd

--- a/openstack/keystonemiddleware/keystonemiddleware.spec.j2
+++ b/openstack/keystonemiddleware/keystonemiddleware.spec.j2
@@ -7,6 +7,8 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/k/%{sname}/%{sname}-%{version}.tar.gz
+# https://review.openstack.org/#/c/546264/
+Patch1:         0001-Add-use_oslo_messaging-option.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('WebOb') }}
 BuildRequires:  {{ py2pkg('WebTest') }}
