Install license files as %license
This is meanwhile enforced by the new version of spec-cleaner
in the linters check.

Change-Id: Ieedf0a9d3f4a317d1251a683fec0f2212999c357

--- a/openstack/XStatic-roboto-fontface/XStatic-roboto-fontface.spec.j2
+++ b/openstack/XStatic-roboto-fontface/XStatic-roboto-fontface.spec.j2
@@ -26,7 +26,8 @@ roboto-fontface javascript library packaged for setuptools (easy_install) / pip.
 %{py2_install}
 
 %files
-%doc README.txt xstatic/pkg/roboto_fontface/data/LICENSE
+%license xstatic/pkg/roboto_fontface/data/LICENSE
+%doc README.txt
 %dir %{python2_sitelib}/xstatic
 %dir %{python2_sitelib}/xstatic/pkg
 %{python2_sitelib}/xstatic/pkg/roboto_fontface
