os-brick: Add backport of https://review.openstack.org/#/c/539359
This is needed for successful testing on SUSE

Change-Id: Ifde8427f03ef7ac446ce65e2157ee60b176ad470

--- a/openstack/os-brick/os-brick.spec.j2
+++ b/openstack/os-brick/os-brick.spec.j2
@@ -7,6 +7,8 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+# backport of https://review.openstack.org/#/c/539359
+Patch1:         0001-Always-set-ignoreskipactivation-on-snapshot-creation.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('Babel') }}
 BuildRequires:  {{ py2pkg('castellan') }}
@@ -68,7 +70,7 @@ Features:
 This package contains the documentation.
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -p1 -n %{sname}-%{version}
 %py_req_cleanup
 sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
