Add patch to fix testsuite run after 2018/02/28
Change-Id: Iff2acf515c6a168020622005e0aee14cdf47c54d

--- a/openstack/python-barbicanclient/python-barbicanclient.spec.j2
+++ b/openstack/python-barbicanclient/python-barbicanclient.spec.j2
@@ -11,6 +11,8 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 URL:            https://launchpad.net/{{ pypi_name }}
 Source0:        {{ source }}
+# backport of https://review.openstack.org/#/c/550621/
+Patch1:         0001-Updating-time-for-functional-tests.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('cliff', py_versions=['py2', 'py3']) }}
