Add patch to fix testsuite run after 2018/02/28
Change-Id: Iff2acf515c6a168020622005e0aee14cdf47c54d
(cherry picked from commit cc943d9f5ab3aa40bd63239ffdb057f969c22507)

--- a/openstack/python-barbicanclient/python-barbicanclient.spec.j2
+++ b/openstack/python-barbicanclient/python-barbicanclient.spec.j2
@@ -9,6 +9,8 @@ Url:            http://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/p/%{sname}/%{sname}-%{version}.tar.gz
 # From https://review.openstack.org/#/c/538186/
 Patch1:         0001-Pass-OSC-interface-through-to-barbican-plugin.patch
+# backport of https://review.openstack.org/#/c/550621/
+Patch2:         0001-Updating-time-for-functional-tests.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('cliff') }}
 BuildRequires:  {{ py2pkg('devel') }}
