Use basename filter for vmware-nsx
There is no tag for what is currently in its pike stable branch in git
and no release on pypi.

renderspec fetch_source and obs service download_files have different
caching behaviour and both are in use. So stable URLs like
vmware-nsx-stable-pike.tar.gz with changing content will not work. The
CI will not update the file that is used to build but the version in the
rendered spec is updated.

Change-Id: Ifa7a9745984f1c73735deab857af0fe33446c075

--- a/openstack/vmware-nsx/vmware-nsx.spec.j2
+++ b/openstack/vmware-nsx/vmware-nsx.spec.j2
@@ -10,7 +10,7 @@ Summary:        VMware-NSX family of Neutron plugins
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            http://launchpad.net/vmware-nsx
-Source0:        {{ source }}
+Source0:        {{ source|basename }}
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('neutron-lib') }}
