--- a/openstack/oslo.messaging/oslo.messaging.spec.j2
+++ b/openstack/oslo.messaging/oslo.messaging.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'oslo.messaging' %}
-{% set upstream_version = upstream_version('5.35.0') %}
+{% set upstream_version = upstream_version('5.36.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -102,7 +102,7 @@ rm -f oslo_messaging/tests/drivers/test_amqp_driver.py
 # generate html docs
 %{__python2} setup.py build_sphinx
 # remove the sphinx-build leftovers
-rm -rf doc/build/html/.{doctrees,buildinfo}
+rm -rf build/sphinx/html/.{doctrees,buildinfo}
 
 %install
 %{py2_install}
@@ -124,6 +124,6 @@ testr run --load-list test-list
 
 %files doc
 %license LICENSE
-%doc doc/build/html
+%doc build/sphinx/html
 
 %changelog
