Update oslo.db to 4.35.0
Co-Authored-By: Thomas Bechtold <tbechtold@suse.com>
Depends-on: Iab62a70825c0fce15b253d88aafb8af66b3f4e3c
Change-Id: Ia53f40a2b6d4044e6a20b5665c999f82bb9465d0

--- a/openstack/oslo.db/oslo.db.spec.j2
+++ b/openstack/oslo.db/oslo.db.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'oslo.db' %}
-{% set upstream_version = upstream_version('4.33.0') %}
+{% set upstream_version = upstream_version('4.35.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -46,6 +46,8 @@ Requires:       {{ py2pkg('psycopg2') }}
 Requires:       {{ py2pkg('six') }}
 Requires:       {{ py2pkg('sqlalchemy-migrate') }}
 Requires:       {{ py2pkg('stevedore') }}
+Requires:       {{ py2pkg('testresources') }}
+Requires:       {{ py2pkg('testscenarios') }}
 BuildArch:      noarch
 
 %description
