oslo.log: Add patch for testsuite fix on s390
Added 0001-Increase-sleep-time-in-testsuite-to-make-it-more-rob.patch

Change-Id: I812c375843afa2b92ded2bfa7049c75cd4308a51
(cherry picked from commit c7fd2577f8d8c9b32cd886a58f876e3370d92ed3)

--- a/openstack/oslo.log/oslo.log.spec.j2
+++ b/openstack/oslo.log/oslo.log.spec.j2
@@ -11,6 +11,8 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 URL:            https://launchpad.net/{{ pypi_name }}
 Source0:        {{ source }}
+# https://review.openstack.org/#/c/554180/
+Patch0:         0001-Increase-sleep-time-in-testsuite-to-make-it-more-rob.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('mock', py_versions=['py2', 'py3']) }}
