masakari: Fix build
Remove usr/etc files which a nowadays installed.

Change-Id: Ia302ce0ff510ac2ebbe89e4799b5d6d91f90a0e5

--- a/openstack/masakari/masakari.spec.j2
+++ b/openstack/masakari/masakari.spec.j2
@@ -149,6 +149,9 @@ install -p -D -m 640 etc/masakari/api-paste.ini %{buildroot}%{_sysconfdir}/masak
 install -p -D -m 640 etc/masakari/policy.json %{buildroot}%{_sysconfdir}/masakari/policy.json
 chmod +x %{buildroot}%{_bindir}/masakari*
 
+# remove usr/etc
+rm -rf %{buildroot}%{_prefix}%{_sysconfdir}/
+
 %pre
 %openstack_pre_user_group_create masakari masakari
 
